<resources>

    <string name="app_name">ShadowEditer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Shadow Editer</string>
    <string name="input_error">Some input value is wrong, please check!</string>
    <string name="help">Color value format is #AARRGGBB,Dx Dy Radius is float number,text size unit is SP</string>
    <string name="set">"  set  "</string>
    <string name="text_size">text size</string>
    <string name="shadow_color">shadow color</string>
    <string name="shadow_radius">shadow radius( 3.1 )</string>
    <string name="shadow_dy">shadow dy( 2.6 )</string>
    <string name="shadow_dx">shadow dx( 2.5 )</string>
    <string name="the_textbackground_color">the textbackground color</string>
    <string name="the_text_color">the text color</string>
    <string name="input_text_to_display">input text to display</string>
    <string name="default_text">Hello world!</string>

</resources>