<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />
    
    <EditText 
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text_to_display"
        android:text="@string/default_text"
        android:layout_below="@id/text"
        />
    <EditText 
        android:id="@+id/editTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/the_text_color"
        android:text="#FF0000"
        android:layout_below="@id/editText"
        />
    <EditText 
        android:id="@+id/editTextBgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#FFFFFF"
        android:layout_marginLeft="10dp"
        android:hint="@string/the_textbackground_color"
        android:layout_below="@id/editText"
        android:layout_alignParentRight="true"
        />
    <EditText 
        android:id="@+id/editTextDX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/shadow_dx"
        android:text="3.2"
        android:layout_below="@id/editTextColor"
        />
    <EditText 
        android:id="@+id/editTextDY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignParentRight="true"
        android:text="3.6"
        android:hint="@string/shadow_dy"
        android:layout_below="@id/editTextBgColor"
        android:layout_toRightOf="@id/editTextDX"
        />
    <EditText 
        android:id="@+id/editTextRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        android:hint="@string/shadow_radius"
        android:layout_below="@id/editTextDX"
        />
    <EditText 
        android:id="@+id/editTextShadowColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#AA000000"
        android:layout_marginLeft="10dp"
        android:layout_alignParentRight="true"
        android:hint="@string/shadow_color"
        android:layout_below="@id/editTextDY"
        android:layout_toRightOf="@id/editTextRadius"
        />
    <EditText 
        android:id="@+id/editTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="26"
        android:hint="@string/text_size"
        android:layout_below="@id/editTextRadius"
        />
    <Button 
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/editTextSize"
        android:layout_below="@id/editTextRadius"
        />
    <TextView 
        android:layout_below="@id/set"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:paddingBottom="10dp"
        />

</RelativeLayout>
